# cppcon2023

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
API/: CMakeLists.txt
API/include/plugin_api/: motion_planner_interface.h  motion_planner_interface.hpp
cmake/: CppConPluginExampleConfig.cmake
core/: motion_plan.cpp  motion_plan.hpp
core/include/: motion_plan_config.h.in  plugin_manager_errors.h
core/planner_manager/: CMakeLists.txt  planner_manager.cpp  planner_manager.h
core/plugin_manager/: CMakeLists.txt  class_loader.h  meta_object.hpp  rosful_class_loader.hpp  shared_library.hpp
core/plugin_manager/include/plugin_manager/: class_loader.hpp  rosful_class_loader.hpp
libraries/simple_motion_planner/: CMakeLists.txt  simple_motion_planner.cpp  simple_motion_planner.h  simple_motion_planner.hpp  simple_motition_planner.hpp
libraries/simple_motion_planner/cmake/: simple_motion_plannerConfig.cmake
plugin_manager/: CMakeLists.txt  class_loader.hpp
plugin_manager/include/plugin_manager/: class_loader.hpp  rosful_class_loader.hpp
plugin_manager/src/: class_loader.cpp
plugins/: simple_motition_plannner.hpp
tests/: CMakeLists.txt  test_plugin.cpp
